2016-05-07  Araki Ken  <arakiken@users.sf.net>

	* dict.c: "\r\n" is supported.

	* im_skk.c: Shortcut in inserting 'n' is added.

	* quartz/x.h: NSBackTabCharacter is assigned to XK_ISO_Left_Tab.

2016-05-06  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c:
	  - im_skk_t::mode is backed up and restored before and after editing a new word.
	  - Text on a status window is correctly updated.

	* dict.c:
	  - The timing of loading global dictionary is fixed.
	  - Uninitialized variable ('num') is fixed.

2016-05-05  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c, dict.[ch]: Cleanup.

2016-05-05  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c, dict.c:
	  - 'back' argument of dict_completion() is changed to 'step' which designates
	    how many steps to go to a next caption.
	  - dict_completion_reset() -> dict_completion_reset_and_finish().

2016-05-05  Araki Ken  <arakiken@users.sf.net>

	* dict.c: Whether skk server supports "4xxx \n" protocol or not is checked.

	* im_skk.c, dict.c: Completion is supported.

	* ml_vt100_parser.c: vt100_parser->yeild = 0 (specific to framebuffer) at
	  the end of parse_vt100_parser() is removed.

2016-05-04  Araki Ken  <arakiken@users.sf.net>

	* x_im_status_screen.c, win32/x_window.c: Hack for win32gdi is moved from
	  x_im_status_screen.c to win32/x_window.c

	* x_im_status_screen-cocoa.m: Status screen is shown before calling
	  x_im_status_screen_t::show().

2016-05-04  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c:
	  - Direct input triggered by 'l' key is available in editing a word
	    to be newly registerd.
	  - Status window is shown while skk is enabled.
	  - Full width alphabets input triggerd by 'L' is available.
	  - (concat "...") is partially available.
	  - It is possible to register a new word containing '/' and ';'.

	* hb.c: Compiling error is fixed.

	* configure.in: hb-coretext.h is checked on MacOSX/Cocoa.

2016-05-01  Araki Ken  <arakiken@users.sf.net>

	* im_skk.c: Ctrl+g resets preediting states.
